# artifacts/api-server/src/routes/index.ts
@@ -3,6 +3,7 @@ import healthRouter from "./health";
 import emailRouter from "./email";
 import applicationsRouter from "./applications";
 import googleAuthRouter from "./google-auth";
+import activityRouter from "./activity";
 
 const router: IRouter = Router();
 
@@ -10,5 +11,6 @@ router.use(healthRouter);
 router.use(googleAuthRouter);
 router.use(emailRouter);
 router.use(applicationsRouter);
+router.use(activityRouter);
 
 export default router;
